# buildor-pages-rs

./: .example.env  .gitignore  .npmignore  Cargo.toml  README.md  cdk.json  config.ts  package-lock.json  package.json
docs/infra/: buildor-architecture  buildor-architecture.drawio
lib/: deploy-stack.ts  tables-stack.ts
lib/api/: api-deployment-stack.ts  api-project-deployments-stack.ts  api-projects-stack.ts  api-stack.ts  api-users-stack.ts
lib/utils/: output-stack.ts
src/: main.rs
src/api/project-deployments/deployment/get/: Cargo.toml
src/api/project-deployments/deployment/get/src/: main.rs
src/api/project-deployments/post/: Cargo.toml
src/api/project-deployments/post/src/: main.rs
src/api/projects/deploy/post/: Cargo.toml
src/api/projects/deploy/post/src/: main.rs
src/api/projects/list/: Cargo.toml
src/api/projects/list/src/: main.rs
src/api/projects/post/: Cargo.toml
src/api/projects/post/src/: main.rs
src/api/root/any/: Cargo.toml
src/api/root/any/src/: main.rs
src/api/users/list/: Cargo.toml
src/api/users/list/src/: main.rs
src/api/users/post/: Cargo.toml
src/api/users/post/src/: main.rs
src/codebuild/events/processing/: Cargo.toml
src/codebuild/events/processing/src/: main.rs
src/codebuild/start/: codebuild-start.ts
src/layers/buildor/: Cargo.toml
src/layers/buildor/src/: handlers.rs  lib.rs  models.rs  utils.rs
src/layers/buildor/src/handlers/: codebuild.rs  commands.rs  project.rs  project_deployments.rs  projects.rs  users.rs
src/layers/buildor/src/models/: codebuild.rs  commands.rs  common.rs  handlers.rs  project.rs  project_deployment.rs  request.rs  response.rs  user.rs
src/layers/buildor/tests/: projects_handler.rs
src/utils/buildor-tester/: Cargo.toml  README.md
src/utils/buildor-tester/src/: main.rs
test/: lambda-rs.test.ts
