[workspace]
members = [
  # Layers
  "src/layers/buildor",

  # API - Root
  "src/api/root/any",

  # API - Users
  "src/api/users/post",
  "src/api/users/list",

  # API - Projects
  "src/api/projects/post",
  "src/api/projects/list",

  # API - Project Deployments
  "src/api/project-deployments/post",
  "src/api/project-deployments/deployment/get",
]
