[package]
name = "buildor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^0.15"
aws-sdk-dynamodb = "^0.15"
tokio-stream = "0.1.8"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
env_logger = "^0.9"
error-stack = "0.1.1"
uuid = { version = "^1.1", features = ["v4"] }
