[package]
name = "api-root-any"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.5"
log = "^0.4"
tokio = { version = "^1.20", features = ["full"] }
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
# Local
buildor = { path = "../../../layers/buildor" }
