[package]
name = "api-users-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.5"
tokio = { version = "^1", features = ["full"] }
serde_json = "^1"
log = "^0.4"
# Local
buildor = { path = "../../../layers/buildor" }
