[package]
name = "api-users-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.5"
tokio = { version = "^1.20", features = ["full"] }
serde_json = "^1"
log = "^0.4"
env_logger = "^0.9"
error-stack = "0.1.1"
# Local
buildor = { path = "../../../layers/buildor" }
