[package]
name = "api-projects-deploy-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^0.15"
tokio = { version = "^1", features = ["full"] }
lambda_runtime = "^0.5"
aws-sdk-codebuild = "0.15"
serde_json = "^1"
log = "^0.4"
env_logger = "^0.9"
error-stack = "0.1.1"
# Local
buildor = { path = "../../../../layers/buildor" }
