[package]
name = "api-projects-deploy-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.5"
aws-config = "^0.15"
aws-sdk-codebuild = "^0.15"
log = "^0.4"
tokio = { version = "^1", features = ["full"] }
serde_json = "^1"
env_logger = "^0.9"
error-stack = "0.1.1"
# Local
buildor = { path = "../../../../layers/buildor" }
